plugins {
    id 'java-library'
}

group 'net.edhum'
version '1.0-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_16
targetCompatibility = JavaVersion.VERSION_16

repositories {
    mavenCentral()
}

dependencies {
    // Guice
    api group: 'com.google.inject', name: 'guice', version: '5.0.1'
    implementation group: 'com.google.inject.extensions', name: 'guice-assistedinject', version: '5.0.1'
    api group: 'com.google.inject.extensions', name: 'guice-throwingproviders', version: '5.0.1'

    // Templates
    implementation group: 'org.freemarker', name: 'freemarker', version: '2.3.31'

    // Persistence
    implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.0' // SQL

    // YAML
    implementation group: 'org.yaml', name: 'snakeyaml', version: '1.29'
}